# tradingview-webhook-bot

./: .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose-dev.yml  compose.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt
deployments/gcp/: cloudbuild.yaml
docs/: index.md
tests/: test_emitter.py
tradingview_webhook_bot/: config.py  emitter.py  handler.py
