[tool.poetry]
name = "tradingview-webhook-bot"
version = "0.1.0"
description = "The TradingView Webhook Bot ⚙️ listens to TradingView alerts via webhooks using flask. All alerts can be instantly sent to Telegram, Discord, Twitter and/or Email."
authors = ["Sonami <sonami@cyberapper.ai>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 || ^3.9 || ^3.10 || ^3.11 || ^3.12"
appdirs = "1.4.4"
apscheduler = "3.6.3"
black = "21.5b1"
cachetools = "4.2.2"
certifi = "2021.5.30"
chardet = "4.0.0"
click = "8.0.1"
discord-webhook = "0.14.0"
flake8 = "3.9.2"
flask = "2.0.1"
idna = "2.10"
isort = "5.8.0"
itsdangerous = "2.0.1"
jinja2 = "3.1.2"
markupsafe = "2.0.1"
mccabe = "0.6.1"
mypy-extensions = "0.4.3"
oauthlib = "3.1.1"
pathspec = "0.11.1"
pycodestyle = "2.7.0"
pyflakes = "2.3.1"
pysocks = "1.7.1"
python-telegram-bot = "13.6"
pytz = "2021.1"
regex = "2023.12.25"
requests = "2.31.0"
requests-oauthlib = "1.3.0"
six = "1.16.0"
slack-webhook = "1.0.6"
toml = "0.10.2"
tornado = "6.1"
tweepy = "3.10.0"
tzlocal = "2.1"
urllib3 = "1.26.5"
waitress = "2.1.1"
werkzeug = "2.0.1"
pika = "^1.3.2"
python-dotenv = "^1.0.1"
google-cloud-pubsub = "^2.21.1"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.0.3"
mkdocs = "^1.5.3"
mkdocstrings = {version= "^0.24.0", extras=["python"]}
mkdocs-material = "^9.5.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[semantic_release]
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"

[semantic_release.branches.main]
match = "(main|master|develop)"
prerelease_token = "rc"
prerelease = false

[semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "algo724-release  <semantic-release>"

[semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[semantic_release.remote.token]
env = "GH_TOKEN"

[semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true